--- a/src/style/index.css
+++ b/src/style/index.css
@@ -11,7 +11,7 @@ body> ul,li,img,button{
 }
 /* set image for banner */
 .setImg { 
-    background-image: url('../assets/images/bnrbg.jpg');
+    background-image: url('../assets/images/banner.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
